@@ -7,10 +7,10 @@ import com.google.common.collect.LinkedListMultimap;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Multimap;
 
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.world.storage.WorldSavedData;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.ListTag;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.saveddata.SavedData;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.client.event.ClientPlayerNetworkEvent;
@@ -18,14 +18,14 @@ import net.minecraftforge.common.util.Constants;
 import net.minecraftforge.common.util.INBTSerializable;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod.EventBusSubscriber;
-import net.minecraftforge.fml.event.server.FMLServerStoppedEvent;
+import net.minecraftforge.fmlserverevents.FMLServerStoppedEvent;
 import snownee.kiwi.Kiwi;
 
 /**
  * @since 2.4
  */
 @EventBusSubscriber
-public final class Scheduler extends WorldSavedData {
+public final class Scheduler extends SavedData {
 	public static final String ID = Kiwi.MODID + "-schedule";
 	public static final Scheduler INSTANCE = new Scheduler();
 
@@ -35,7 +35,6 @@ public final class Scheduler extends WorldSavedData {
 	protected static final Multimap<ITicker, Task> taskMap = LinkedListMultimap.create();
 
 	private Scheduler() {
-		super(ID);
 	}
 
 	public static void register(ResourceLocation id, Class<? extends Task> clazz) {
@@ -51,13 +50,13 @@ public final class Scheduler extends WorldSavedData {
 		}
 	}
 
-	public Task deserialize(CompoundNBT data) {
+	public static Task deserialize(CompoundTag data) {
 		try {
 			ResourceLocation type = new ResourceLocation(data.getString("type"));
 			Class<Task> clazz = idToTask.get(type);
 			if (clazz != null) {
-				Task task = clazz.newInstance();
-				((INBTSerializable<CompoundNBT>) task).deserializeNBT(data);
+				Task task = clazz.getDeclaredConstructor().newInstance();
+				((INBTSerializable<CompoundTag>) task).deserializeNBT(data);
 				return task;
 			}
 		} catch (Exception e) {
@@ -66,11 +65,11 @@ public final class Scheduler extends WorldSavedData {
 		return null;
 	}
 
-	public CompoundNBT serialize(Task task) {
+	public CompoundTag serialize(Task task) {
 		if (task.shouldSave()) {
 			try {
 				ResourceLocation type = taskToId.get(task.getClass());
-				CompoundNBT data = ((INBTSerializable<CompoundNBT>) task).serializeNBT();
+				CompoundTag data = ((INBTSerializable<CompoundTag>) task).serializeNBT();
 				data.putString("type", type.toString());
 				return data;
 			} catch (Exception e) {
@@ -106,22 +105,22 @@ public final class Scheduler extends WorldSavedData {
 		return !taskMap.isEmpty();
 	}
 
-	@Override
-	public void load(CompoundNBT nbt) {
-		ListNBT list = nbt.getList("tasks", Constants.NBT.TAG_COMPOUND);
+	public static Scheduler load(CompoundTag nbt) {
+		ListTag list = nbt.getList("tasks", Constants.NBT.TAG_COMPOUND);
 		for (int i = 0; i < list.size(); i++) {
 			Task task = deserialize(list.getCompound(i));
 			if (task != null) {
 				add(task);
 			}
 		}
+		return INSTANCE;
 	}
 
 	@Override
-	public CompoundNBT save(CompoundNBT data) {
-		ListNBT list = new ListNBT();
+	public CompoundTag save(CompoundTag data) {
+		ListTag list = new ListTag();
 		for (Task task : taskMap.values()) {
-			CompoundNBT nbt = serialize(task);
+			CompoundTag nbt = serialize(task);
 			if (nbt != null) {
 				list.add(nbt);
 			}
